// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Loading.vue > props > :inheritColor 1`] = `
<div
  class="t-loading"
  style="font-size: 20px;"
>
  <svg
    class="t-loading__gradient t-icon-loading"
    height="1em"
    style="animation-duration: 800ms; width: 20px; height: 20px;"
    version="1.1"
    viewBox="0 0 12 12"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <foreignobject
      height="12"
      width="12"
      x="0"
      y="0"
    >
      <div
        class="t-loading__gradient-conic"
      />
    </foreignobject>
  </svg>
  <!---->
  <!---->
</div>
`;

exports[`Loading.vue > props > :pause 1`] = `
<div
  class="t-loading"
  style="font-size: 20px;"
>
  <svg
    class="t-loading__gradient t-icon-loading"
    height="1em"
    style="animation-play-state: paused; animation-duration: 800ms; width: 20px; height: 20px;"
    version="1.1"
    viewBox="0 0 12 12"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <foreignobject
      height="12"
      width="12"
      x="0"
      y="0"
    >
      <div
        class="t-loading__gradient-conic"
      />
    </foreignobject>
  </svg>
  <!---->
  <!---->
</div>
`;

exports[`Loading.vue > props > :reverse 1`] = `
<div
  class="t-loading"
  style="font-size: 20px;"
>
  <svg
    class="t-loading__gradient t-icon-loading"
    height="1em"
    style="animation-direction: reverse; animation-duration: 800ms; width: 20px; height: 20px;"
    version="1.1"
    viewBox="0 0 12 12"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <foreignobject
      height="12"
      width="12"
      x="0"
      y="0"
    >
      <div
        class="t-loading__gradient-conic"
      />
    </foreignobject>
  </svg>
  <!---->
  <!---->
</div>
`;

exports[`spinner.vue > render > :text 1`] = `
<span
  class="t-loading__spinner"
>
  
  <i
    class="t-loading__spinner--line t-loading__spinner--line-1"
  />
  <i
    class="t-loading__spinner--line t-loading__spinner--line-2"
  />
  <i
    class="t-loading__spinner--line t-loading__spinner--line-3"
  />
  <i
    class="t-loading__spinner--line t-loading__spinner--line-4"
  />
  <i
    class="t-loading__spinner--line t-loading__spinner--line-5"
  />
  <i
    class="t-loading__spinner--line t-loading__spinner--line-6"
  />
  <i
    class="t-loading__spinner--line t-loading__spinner--line-7"
  />
  <i
    class="t-loading__spinner--line t-loading__spinner--line-8"
  />
  <i
    class="t-loading__spinner--line t-loading__spinner--line-9"
  />
  <i
    class="t-loading__spinner--line t-loading__spinner--line-10"
  />
  <i
    class="t-loading__spinner--line t-loading__spinner--line-11"
  />
  <i
    class="t-loading__spinner--line t-loading__spinner--line-12"
  />
  
</span>
`;
